Se verifica el testing coverage y se configura la build

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "02-bases",
   "version": "1.0.0",
-  "description": "Esta es mi primera aplicación real de Node",
+  "description": "Aplicación de NodeJs más testing con Jest ",
   "main": "app.js",
   "scripts": {
     "test": "jest",
